<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_login"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:autofillHints="random@gmail.com"
        android:background="@drawable/stroke"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/padding"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_label" />

    <EditText
        android:id="@+id/pass_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:autofillHints="password"
        android:background="@drawable/stroke"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="@dimen/padding"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/name_input"
        app:layout_constraintStart_toStartOf="@id/name_input"
        app:layout_constraintTop_toBottomOf="@id/name_input" />

    <TextView
        android:id="@+id/forget_pass_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="@+id/pass_input"
        app:layout_constraintTop_toBottomOf="@+id/pass_input" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/solid"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/pass_input"
        app:layout_constraintStart_toStartOf="@+id/pass_input"
        app:layout_constraintTop_toBottomOf="@+id/forget_pass_label" />

    <TextView
        android:id="@+id/dnt_have_account_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/register_now_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:textColor="@color/hover"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toEndOf="@id/dnt_have_account_label"
        app:layout_constraintTop_toTopOf="@+id/dnt_have_account_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:background="@drawable/solid"
        android:drawableStart="@drawable/ic_google"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:text="@string/google"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/facebook"
        app:layout_constraintEnd_toStartOf="@+id/facebook"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dnt_have_account_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:background="@drawable/solid"
        android:drawableStart="@drawable/ic_facebook"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:text="@string/facebook"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Google"
        app:layout_constraintTop_toBottomOf="@+id/register_now_label" />


</androidx.constraintlayout.widget.ConstraintLayout>