<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="520dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="Username"
        android:background="@drawable/stroke"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_label" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="random@gmail.com"
        android:background="@drawable/stroke"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/name_input"
        app:layout_constraintStart_toStartOf="@id/name_input"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="252dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="+201552516133"
        android:background="@drawable/stroke"
        android:drawableStart="@drawable/ic_baseline_phone_android_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="+20 - Mobile"
        android:inputType="text"
        android:padding="8dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/email_input"
        app:layout_constraintStart_toStartOf="@id/email_input"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="252dp" />

    <EditText
        android:id="@+id/city_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="Cairo, Egypt"
        android:background="@drawable/stroke"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="city, Egypt"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/phone"
        app:layout_constraintStart_toStartOf="@id/phone"
        app:layout_constraintTop_toBottomOf="@id/phone"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="252dp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:background="@drawable/stroke"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/city_country"
        app:layout_constraintStart_toStartOf="@id/city_country"
        app:layout_constraintTop_toBottomOf="@id/city_country"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="340dp" />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:background="@drawable/stroke"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/password_input"
        app:layout_constraintStart_toStartOf="@id/password_input"
        app:layout_constraintTop_toBottomOf="@id/password_input" />

    <TextView
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/solid"
        android:backgroundTint="@color/white"
        android:padding="8dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password_input"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_input"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_input" />

    <TextView
        android:id="@+id/have_account_login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_an_account_login"
        android:textAlignment="center"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@id/register_button"
        app:layout_constraintStart_toStartOf="@id/register_button"
        app:layout_constraintTop_toBottomOf="@id/register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>